--- a/src/components/Collection.css
+++ b/src/components/Collection.css
@@ -24,6 +24,55 @@
   background-clip: text;
 }
 
+.collection .cta {
+  text-align: center;
+  margin-bottom: 100px;
+  border: none;
+}
+
+.collection .cta a {
+  display: inline-block;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 20px 60px;
+  background: linear-gradient(25deg, #5101e3, #8300e7, #a900eb, #cc00ee, #eb00f0);  
+  color: #fff;
+  border-radius: 50px;
+  text-decoration: none;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 0.3s ease-in-out;
+}
+
+.collection .cta a:hover{
+  background: linear-gradient(50deg, #5101e3, #8300e7, #a900eb, #cc00ee, #eb00f0);
+}
+
+.collection .cta {
+  text-align: center;
+  margin-bottom: 100px;
+  border: none;
+}
+
+.collection .cta a {
+  display: inline-block;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 20px 60px;
+  background: linear-gradient(25deg, #5101e3, #8300e7, #a900eb, #cc00ee, #eb00f0);  
+  color: #fff;
+  border-radius: 50px;
+  text-decoration: none;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 0.3s ease-in-out;
+}
+
+.collection .cta a:hover{
+  background: linear-gradient(50deg, #5101e3, #8300e7, #a900eb, #cc00ee, #eb00f0);
+}
 .collection-card {
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
