--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,23 +1,53 @@
 .hero {
-  max-width: 1200px;
+  background-image: url(../images/hero-background.jpg);
+  background-position: inherit;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100vw;
   width: 100%;
   margin: 0 auto;
-  padding: 0 20px;
+  /* padding: 0 20px; */
 }
 
 .content {
-  padding: 30px 0;  
+  padding: 20px 0;  
   text-align: center;
 }
 
 .content h1 {
   font-family: 'Poppins', sans-serif;
   color: #000;
-  font-size: 96px;
+  font-size: 76px;
   font-weight: 700;
   line-height: 1;
   letter-spacing: normal;
   text-transform: uppercase;
+}
+
+
+.hero .cta {
+  text-align: center;
+  margin-bottom: 100px;
+  border: none;
+}
+
+.hero .cta a {
+  display: inline-block;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 20px 60px;
+  background: linear-gradient(25deg, #5101e3, #8300e7, #a900eb, #cc00ee, #eb00f0);  
+  color: #fff;
+  border-radius: 50px;
+  text-decoration: none;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 0.3s ease-in-out;
+}
+
+.hero .cta a:hover{
+  background: linear-gradient(50deg, #5101e3, #8300e7, #a900eb, #cc00ee, #eb00f0);
 }
 
 .content h1 span {
