--- a/src/components/Why.css
+++ b/src/components/Why.css
@@ -11,6 +11,33 @@
   margin: 40px auto;
 }
 
+
+.why .cta {
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 100px;
+  border: none;
+}
+
+.why .cta a {
+  display: inline-block;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 20px 60px;
+  background: linear-gradient(25deg, #5101e3, #8300e7, #a900eb, #cc00ee, #eb00f0);  
+  color: #fff;
+  border-radius: 50px;
+  text-decoration: none;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 0.3s ease-in-out;
+}
+
+.why .cta a:hover{
+  background: linear-gradient(50deg, #5101e3, #8300e7, #a900eb, #cc00ee, #eb00f0);
+}
+
 .content h2 {
   font-family: 'Poppins', sans-serif;
   color: #000;
