--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -1,5 +1,5 @@
 .team {
-  max-width: 1200px;
+  max-width: 100vw;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
@@ -8,7 +8,7 @@
 .team h1 {
   font-family: 'Poppins', sans-serif;
   color: #000;
-  font-size: 80px;
+  font-size: 70px;
   font-weight: 700;
   line-height: 1;
   letter-spacing: normal;
