--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -16,7 +16,7 @@
 
 .content h1 {
   font-family: 'Poppins', sans-serif;
-  color: #000;
+  color: white;
   font-size: 76px;
   font-weight: 700;
   line-height: 1;
