--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .Footer {
-  max-width: 1200px;
+  max-width: 100vw;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
@@ -15,8 +15,8 @@
 .Footer h1 {
   font-family: 'Poppins', sans-serif;
   color: #000;
-  font-size: 100px;
-  font-weight: 700;
+  font-size: 60px;
+  font-weight: 500;
   line-height: 1;
   letter-spacing: normal;
   text-transform: uppercase;
@@ -33,11 +33,11 @@
 .Footer .subtitle {
   font-family: 'Poppins', sans-serif;
   color: #000;
-  font-size: 24px;
+  font-size: 27px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: normal;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   text-align: center;
 }
 
@@ -50,7 +50,7 @@
 .Footer .cta a {
   display: inline-block;
   font-family: 'Poppins', sans-serif;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 500;
   text-transform: uppercase;
   padding: 20px 60px;
