--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -4,6 +4,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100vw;
+    max-height: 100vh;
+
   width: 100%;
   margin: 0 auto;
   /* padding: 0 20px; */
