--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,6 @@
 .Footer {
   max-width: 100vw;
+  color: aliceblue !important;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
@@ -14,7 +15,7 @@
 
 .Footer h1 {
   font-family: 'Poppins', sans-serif;
-  color: #000;
+  color: white;
   font-size: 60px;
   font-weight: 500;
   line-height: 1;
@@ -32,7 +33,7 @@
 
 .Footer .subtitle {
   font-family: 'Poppins', sans-serif;
-  color: #000;
+  color: white;
   font-size: 27px;
   font-weight: 500;
   line-height: 1.5;
@@ -81,7 +82,7 @@
 
 .Footer .social-links a,
 .Footer .footer-links a {
-  color: #666;
+  color: white;
   text-decoration: none;
 }
 
@@ -89,17 +90,17 @@
   font-size: 20px;
 }
 .Footer .footer-links a {
-  font-size: 18px;
+  font-size: 22px;
 }
 
 .Footer .social-links a:hover,
 .Footer .footer-links a:hover {
-  color: #000;
+  color: white;
 }
 
 .Footer .copy {
   font-family: 'Poppins', sans-serif;
-  color: #666;
+  color: white;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
@@ -109,8 +110,8 @@
 }
 .Footer .credit {
   font-family: 'Poppins', sans-serif;
-  color: #161616;
-  font-size: 14px;
+  color: white;
+  font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: normal;
@@ -119,7 +120,7 @@
 }
 
 .Footer .credit a {
-  color: #5101e3;
+  color: red;
   text-decoration: none;
 }
 
