--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,14 +1,14 @@
 .hero {
-  background-image: url(../images/hero-background.jpg);
-  background-position: inherit;
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 100vw;
+
     max-height: 100vh;
 
   width: 100%;
   margin: 0 auto;
   /* padding: 0 20px; */
+  padding-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .content {
