--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@ html, body {
   margin: 0;
   font-family: 'Space Grotesk', sans-serif;
   background: linear-gradient(to top, #fff 50%, #e9d2fc);
+  background-image: url(./images/hero-background.jpg);
+  background-position: inherit;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed; /* This keeps the background image fixed */
+  max-width: 100vw;
+
 }
 
 /* Scrollbar Customization */
@@ -25,4 +32,14 @@ body::-webkit-scrollbar-thumb {
 
 body::-webkit-scrollbar-thumb:hover {
   background-color: #555;
+}
+
+/* Background for mobile screens */
+@media (max-width: 768px) {
+  body {
+    background-image: url('./images/hero-background-mobile.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: scroll; /* Optional: Change attachment for better performance on mobile */
+  }
 }
