--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 html, body {
   overflow-x: hidden;
   margin: 0;
+  padding: 0;
   font-family: 'Space Grotesk', sans-serif;
   background: linear-gradient(to top, #5d4bc0 , #59099a);
   background-position: inherit;
